2009-04-30  Mark Ellis <mark@mpellis.org.uk>

	* initial conversion to kde4
