@@ -13,19 +13,22 @@ set (CPACK_PACKAGE_DESCRIPTION_SUMMARY "KDE application to remotely view and con
 set (CPACK_RESOURCE_FILE_LICENSE ${CMAKE_CURRENT_SOURCE_DIR}/COPYING )
 set (CPACK_SOURCE_GENERATOR "TGZ;TBZ2")
 set (CPACK_SOURCE_PACKAGE_FILE_NAME kde4-kcemirror-${CPACK_PACKAGE_VERSION} )
+set (CPACK_SOURCE_IGNORE_FILES
+"/\\\\.svn/"
+"/build/"
+".*~$"
+".*kdev4$" )
 set (CPACK_CMAKE_GENERATOR "Unix Makefiles")
 include (CPack)
 
 
 find_package(KDE4 REQUIRED)
-include (UsePkgConfig)
+include(FindPkgConfig)
 include(KDE4Defaults)
 include(MacroLibrary)
 
-PKGCONFIG(librapi2 SYNCE_INCLUDE_DIR SYNCE_LINK_DIR SYNCE_LINK_FLAGS SYNCE_CFLAGS)
+pkg_check_modules( SYNCE REQUIRED librapi2 )
 add_definitions(${SYNCE_CFLAGS} ${QT_DEFINITIONS} ${KDE4_DEFINITIONS})
-
-add_definitions(-DQT3_SUPPORT -DQT3_SUPPORT_WARNINGS)
 
 include_directories(${CMAKE_BINARY_DIR} ${SYNCE_INCLUDE_DIRS} ${KDE4_INCLUDES} ${KDE4_INCLUDE_DIR} ${QT_INCLUDES} )
 
